# covid-19-gender-research

./: .gitignore  process_abstracts.py  pyproject.toml  scrape_abstracts.py  scrape_index.py
data/: fen_ids.txt
