[tool.poetry]
name = "covid-19-gender-research"
version = "0.1.0"
description = ""
authors = ["Nils Werner <nils.jp.werner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
cloudscraper = "^1.2.38"
beautifulsoup4 = "^4.9.1"
tqdm = "^4.46.1"
ijson = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
